; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/telnet/telnet/extr_telnet.c_env_opt_start_info.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/telnet/telnet/extr_telnet.c_env_opt_start_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@opt_replyp = common dso_local global i32* null, align 8
@TELQUAL_INFO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @env_opt_start_info() #0 {
  %1 = call i32 (...) @env_opt_start()
  %2 = load i32*, i32** @opt_replyp, align 8
  %3 = icmp ne i32* %2, null
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i32, i32* @TELQUAL_INFO, align 4
  %6 = load i32*, i32** @opt_replyp, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 -1
  store i32 %5, i32* %7, align 4
  br label %8

8:                                                ; preds = %4, %0
  ret void
}

declare dso_local i32 @env_opt_start(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
